--- a/LearnFontEnd/learnHTML/index.html
+++ b/LearnFontEnd/learnHTML/index.html
@@ -1,7 +1,28 @@
+<!-- 
+    -HTML là viết tắt của Hyper Text Markup language
+    -HTML là ngôn ngữ đánh dấu tiêu chuẩn để tạo ra các trang web
+    -HTML mô tả cấu trúc của 1 trang web
+    -HTML bao gồm các phần tử/ Element
+    -HTML Element chỉ cho trình duyệt cách hiển thị nội dung
+    -HTML Element gắn các nhãn cho nội dung như "đây là tiêu đề", "đây là đoạn văn bản", "đây là link liên kết"... 
+ -->
+
+<!-- HTML document/ tài liệu HTML -->
+<!-- ALL HTML document must start with a document type declaration:/
+    tất cả tài liệu HTML phải bắt đầu bằng khai báo loại tài liệu -->
+
 <!DOCTYPE html>
+<!-- <!DOCTYPE html> là kiểu khai báo cho HTML5 /
+     chỉ khai báo 1 lần ở trên cùng tài liệu /
+     giúp trình duyệt hiển thị chính xác hơn /
+     không phân biệt hoa thường-->
+
+<!-- start -->
 <html lang="en">
+<!-- tài liệu html bắt đầu bằng thẻ <html> và kết thúc bằng thẻ </html> -->
 
 <head>
+    <!-- head element là vùng chứa cho các element : meta, title, style, link, script, base -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +30,10 @@
 </head>
 
 <body>
-
+    <!-- phần hiển thị của tài liệu nằm trong body element  -->
+    <h1>My first Heading</h1>
+    <p>My first paragraph</p>
 </body>
 
 </html>
+<!-- end -->
