html heading, css syntax, css selector

--- a/LearnFontEnd/learnHTML/1-ELement.html
+++ b/LearnFontEnd/learnHTML/1-ELement.html
@@ -26,8 +26,12 @@ HTML Element:       < h1 > my first heading < / h1 >
             < hr> gạch ngang <br> thẻ br <br> thẻ hr:
                 <hr>
     </p>
-    <!-- đừng quên end tag? có thể lỗi hiển thị -->
+    <!-- đừng quên end tag? có thể gây lỗi  -->
     <!-- Html không hoa thường <P> = <p>, công nhận -> viết thường  -->
+    <h4>đừng quên end tag? có thể gây lỗi</h4>
+    <h4>Html không hoa thường
+        < P> =
+            < p>, công nhận -> viết thường</h4>
 </body>
 
 </html>
