learn where to js in html

--- a/LearnFontEnd/learnHTML/4-paragraph.html
+++ b/LearnFontEnd/learnHTML/4-paragraph.html
@@ -31,6 +31,12 @@
     <!-- br là empty element -->
 
     <!-- pre element sẽ giữ nguyên định dạng của đoạn văn bên trong -->
+    <pre>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Inventore autem perspiciatis eius soluta dicta eos tempore id adipisci quam. 
+        Iusto laboriosam minus quia dolores facere repellendus.
+        Nisi velit obcaecati asperiores.
+    </pre>
 </body>
 <!-- end -->
 
