learn css background

--- a/LearnFontEnd/html exercises/b2-formatting.html
+++ b/LearnFontEnd/html exercises/b2-formatting.html
@@ -26,6 +26,9 @@
     <h1>Định dạng văn bản theo mẫu</h1>
     <p><ins><b>Hóa học:</b></ins> Nước: <strong>H<sub>2</sub>O</strong>, Axit: <strong>H<sub>2</sub>SO<sub>4</sub></strong> </p>
     <p><ins><b>Toán Học:</b></ins> Hãy tính phương trình sau đây: <strong>x<sup>2</sup> + x + 3 = 0</strong></p>
+
+    <p> Lorem ipsum dolor sit, amet consectetur elit. Unde debitis voluptatem, aliquam repellendus aut beatae aperiam? Possimus, odio quo eveniet iure ducimus illum libero debitis. Ex face rem in. ducimus?
+    </p>
 </body>
 
 </html>
